exclude plugins from export

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,8 @@ runnable=true
 advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="exclude"
+export_files=PackedStringArray("res://addons/gdterm/audio/bell.mp3", "res://addons/gdterm/bin/gdterm.gdextension", "res://addons/gdterm/fonts/SourceCodePro-Bold.ttf", "res://addons/gdterm/fonts/SourceCodePro-Light.ttf", "res://addons/gdterm/fonts/SourceCodePro-Medium.ttf", "res://addons/gdterm/icon/gdterm.svg", "res://addons/gdterm/terminal/border.gd", "res://addons/gdterm/terminal/border.tscn", "res://addons/gdterm/terminal/inactive.tscn", "res://addons/gdterm/terminal/main.gd", "res://addons/gdterm/terminal/main.tscn", "res://addons/gdterm/terminal/term.gd", "res://addons/gdterm/terminal/term.tscn", "res://addons/gdterm/terminal/term_container.gd", "res://addons/gdterm/themes/dark.tres", "res://addons/gdterm/themes/light.tres", "res://addons/gdterm/terminal.gd", "res://addons/godot-git-plugin/git_plugin.gdextension")
 include_filter=""
 exclude_filter=""
 export_path="build/web/index.html"
