--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -22,7 +22,7 @@ script_export_mode=2
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release="engine/godot/bin/godot.web.template_release.wasm32.nothreads.zip"
+custom_template/release=""
 variant/extensions_support=false
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
